force-app/main/default/objects/ERP_Order_Line__c/ERP_Order_Line__c.object-meta.xml
<CustomObject>
    <label>ERP Order Line</label>
    <nameField>
        <label>ERP Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>