force-app/main/default/objects/ERP_Order_Line__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <type>Phone</type>
</CustomField>