force-app/main/default/objects/ERP_Order_Line__c/fields/Bill_To_Address2__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address2__c</fullName>
    <label>Bill To Address2</label>
    <type>TextArea</type>
</CustomField>