force-app/main/default/objects/ERP_Order_Line__c/fields/Bill_To_Address5__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address5__c</fullName>
    <label>Bill To Address5</label>
    <type>TextArea</type>
</CustomField>