force-app/main/default/objects/ERP_Order_Line__c/fields/CUST_AGREE_INV_ACCEPT_DATE__c.field-meta.xml
<CustomField>
    <fullName>CUST_AGREE_INV_ACCEPT_DATE__c</fullName>
    <label>CUST AGREE INV ACCEPT DATE</label>
    <type>Date</type>
</CustomField>