force-app/main/default/objects/ERP_Order_Line__c/fields/Deliver_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Contact__c</fullName>
    <label>Deliver To Contact</label>
    <type>Phone</type>
</CustomField>