force-app/main/default/objects/ERP_Order_Line__c/fields/EMS_Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>EMS_Shipment_Number__c</fullName>
    <label>EMS Shipment Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>