force-app/main/default/objects/ERP_Order_Line__c/fields/Header_Amount__c.field-meta.xml
<CustomField>
    <fullName>Header_Amount__c</fullName>
    <label>Header Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>