force-app/main/default/objects/ERP_Order_Line__c/fields/Intermediate_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Ship_To__c</fullName>
    <label>Intermediate Ship To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>