force-app/main/default/objects/ERP_Order_Line__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <label>Line ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>