force-app/main/default/objects/ERP_Order_Line__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <label>Line Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>