force-app/main/default/objects/ERP_Order_Line__c/fields/Pro_Number__c.field-meta.xml
<CustomField>
    <fullName>Pro_Number__c</fullName>
    <label>Pro Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>