force-app/main/default/objects/ERP_Order_Line__c/fields/PROMISE_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROMISE_DATE__c</fullName>
    <label>PROMISE DATE</label>
    <type>Date</type>
</CustomField>