force-app/main/default/objects/ERP_Order_Line__c/fields/PROMISE_DATE_REASON_CODE__c.field-meta.xml
<CustomField>
    <fullName>PROMISE_DATE_REASON_CODE__c</fullName>
    <label>PROMISE DATE REASON CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>