force-app/main/default/objects/ERP_Order_Line__c/fields/Qty_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Qty_Shipped__c</fullName>
    <label>Qty Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>