force-app/main/default/objects/ERP_Order_Line__c/fields/Schedule_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Arrival_Date__c</fullName>
    <label>Schedule Arrival Date</label>
    <type>Date</type>
</CustomField>