force-app/main/default/objects/ERP_Order_Line__c/fields/SERIAL_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SERIAL_NUMBER__c</fullName>
    <label>SERIAL NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>