force-app/main/default/objects/ERP_Order_Line__c/fields/Ship_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Customer__c</fullName>
    <label>Ship To Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>