force-app/main/default/objects/ERP_Order_Line__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>