force-app/main/default/objects/ERP_Order_Line__c/fields/SW_Key_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SW_Key_End_Date__c</fullName>
    <label>SW Key End Date</label>
    <type>Date</type>
</CustomField>